--- a/index.html
+++ b/index.html
@@ -5,36 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>羊桃觀光牧場|首頁</title>
     <link rel="icon" href="logo\icon.png">
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="common.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
+    <div class="wrap">
+        <div class="para">
+        <img src="back\moun.png" class="back" alt="">
+        <img src="back\floor.png" class="fore" alt="">
+        <img src="back\paralogo.png" class="paralogo" alt="">
+        </div>        
+    </div>
     <header><a href="index.html"><img src="logo/logo.png" alt="logo"></a></header>
     <nav>
         <ul class="navmenu">
-            <li class="list"><a href="">最新消息</a></li>
-            <li class="list"><a href="">園區介紹</a>
+            <li class="list"><a href="new.html">最新消息</a></li>
+            <li class="list"><a href="about.html">園區介紹</a>
                 <ul>
-                    <li><a href="">門票資訊</a></li>
-                    <li><a href="">園區導覽</a></li>
-                    <li><a href="">園區沿革</a></li>
-                    <li><a href="">動物寫真</a></li>
+                    <li><a href="about.html#price">門票資訊</a></li>
+                    <li><a href="about.html#map">園區導覽</a></li>
+                    <li><a href="about.html#story">園區沿革</a></li>
+                    <li><a href="about.html#photo">動物寫真</a></li>
                 </ul>
             </li>
             <li class="list"><a href="activity.html">牧場體驗</a>
                 <ul>
-                    <li><a href="">活動總覽</a></li>
-                    <li><a href="">手作工坊</a></li>
-                    <li><a href="">烤肉方案</a></li>
+                    <li><a href="activity.html#allact">活動總覽</a></li>
+                    <li><a href="activity.html#actblock">手作工坊</a></li>
+                    <li><a href="activity.html#bbq">烤肉方案</a></li>
                 </ul>
             </li>
             <li class="list"><a href="shop.html">小農產品</a>
                 <ul>
-                    <li><a href="">全部商品</a></li>
-                    <li><a href="">純乳系列</a></li>
+                    <li><a href="milkshop.html">純乳系列</a></li>
                     <li><a href="">常溫點心</a></li>
                     <li><a href="">文創商品</a></li>
+                    <li><a href="">全部商品</a></li>
                 </ul>
             </li>
             <li class="list"><a href="QA.html">常見問題</a></li>
@@ -51,6 +58,14 @@
             <img src="back\outline 1.png" alt="bar-img">
         </div>
     </div>
+    <div class="path">
+        <ul>
+            <li><a href="#new">消息<img src="logo/icon.png"></a></li>
+            <li><a href="#activity">體驗<img src="logo/icon.png"></a></li>
+            <li><a href="#shop">產品<img src="logo/icon.png"></a></li>
+            <li><a href="#contact">資訊<img src="logo/icon.png"></a></li>
+        </ul>
+    </div>
     <main>
         <div class="sum">
             <div class="item">
@@ -66,14 +81,7 @@
                 <a href=""><img src="p/milk.jpg"></a>
             </div>
         </div>
-        <div class="path">
-            <ul>
-                <li><a href="#new">消息<img src="logo/icon.png"></a></li>
-                <li><a href="#activity">體驗<img src="logo/icon.png"></a></li>
-                <li><a href="#shop">產品<img src="logo/icon.png"></a></li>
-                <li><a href="#contact">資訊<img src="logo/icon.png"></a></li>
-            </ul>
-        </div>
+        
         <div class="new" id="new">
             <div class="cloudtitle"><h2>最新消息</h2></div>
             <div class="sheeprow">
