--- a/activity.html
+++ b/activity.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant-TW">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>羊桃觀光牧場|園區介紹</title>
     <link rel="icon" href="logo/icon.png">
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/activity.css">
 </head>
@@ -44,9 +45,9 @@
     <main>
         <div class="path">
             <ul>
-                <li><a href="#">互動<img src="logo/icon.png"></a></li>
-                <li><a href="#">手作<img src="logo/icon.png"></a></li>
-                <li><a href="#">烤肉<img src="logo/icon.png"></a></li>
+                <li><a href="#allact">互動<img src="logo/icon.png"></a></li>
+                <li><a href="#actblock">手作<img src="logo/icon.png"></a></li>
+                <li><a href="#bbq">烤肉<img src="logo/icon.png"></a></li>
             </ul>
         </div>
         <div class="pagebar">
@@ -177,7 +178,62 @@
                 <p>所有組合均贈<br>氣泡飲料<br>水果盤<br>特調醬料</p>
             </div>
         </div>
-        .
+        <div class="plan col-8">
+            <div class="row">
+                <img src="activity\meats.jpg" alt="">
+                <div class="txt">
+                    <h3>美味小聚組合</h3>
+                    <p>
+                    薄切羊肉片200g<br>
+                    厚切羊腿肉片180g<br>
+                    什錦甜不辣<br>
+                    小農什錦蔬菜片<br></p>
+                </div>
+                <div class="price">
+                    <p>價格</p>
+                    <p>499</p>
+                    <div class="more btnchangecolor">
+                        <a class="btnchangecolortxt" href="activity.html">馬上預約<i class="btnchangecolortxt fa-solid fa-angles-right"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <img src="activity\meatm.jpg" alt="">
+                <div class="txt">
+                    <h3>精緻特選組合</h3>
+                    <p>
+                    小羔羊肉片200g<br>
+                    厚切羊腿肉片180g<br>
+                    羊肋排200g<br>
+                    小農什錦蔬菜串<br></p>
+                </div>
+                <div class="price">
+                    <p>價格</p>
+                    <p>699</p>
+                    <div class="more btnchangecolor">
+                        <a class="btnchangecolortxt" href="activity.html">馬上預約<i class="btnchangecolortxt fa-solid fa-angles-right"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <img src="activity\meatb.jpg" alt="">
+                <div class="txt">
+                    <h3>豪華享樂組合</h3>
+                    <p>
+                    小羔羊排300g<br>
+                    厚切羊腿肉片180g<br>
+                    羊肋排200g<br>
+                    天然蔬菜漬物<br></p>
+                </div>
+                <div class="price">
+                    <p>價格</p>
+                    <p>899</p>
+                    <div class="more btnchangecolor">
+                        <a class="btnchangecolortxt" href="activity.html">馬上預約<i class="btnchangecolortxt fa-solid fa-angles-right"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
     <div class="server">
         <input type="checkbox" id="bot">
