--- a/detail.html
+++ b/detail.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant-TW">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>羊桃觀光牧場|產品|純乳</title>
+    <title>羊桃觀光牧場|產品|羊乳</title>
     <link rel="icon" href="logo\icon.png">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/grid.css">
