--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant-TW">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,13 +10,6 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    <div class="wrap">
-        <div class="para">
-        <img src="back\moun.png" class="back" alt="">
-        <img src="back\floor.png" class="fore" alt="">
-        <img src="back\paralogo.png" class="paralogo" alt="">
-        </div>        
-    </div>
     <header><a href="index.html"><img src="logo/logo.png" alt="logo"></a></header>
     <nav>
         <ul class="navmenu">
@@ -84,10 +77,21 @@
         
         <div class="new" id="new">
             <div class="cloudtitle"><h2>最新消息</h2></div>
+            <div class="ground">
             <div class="sheeprow">
-                <a href=""><img src="item\NEW1.png"></a>
-                <a href=""><img src="item\NEW2.png"></a>
-                <a href=""><img src="item\NEW3.png"></a>  
+                <div class="newcol">
+                <a href=""><img src="item\new1.png"></a>
+                <a href=""><h3>烤肉週所有方案9折!</h3></a>
+                </div>
+                <div class="newcol">
+                <a href=""><img src="item\new2.png"></a>
+                <a href="">
+                <h3>牧場採摘季：現在是採摘的最佳時機！帶上朋友和家人，一起來採摘新鮮的水果和蔬菜，體驗農場樂趣！</h3></a>
+                </div>
+                <div class="newcol">
+                <a href=""><img src="item\new1.png"></a>
+                <a href=""><h3>烤肉週所有方案9折!</h3></a>
+                </div>  
                 <div class="btn">
                     <button><i class="fa-solid fa-arrow-left"></i></button>
                     <button><i class="fa-solid fa-arrow-right"></i></button>
@@ -96,7 +100,8 @@
                     <a class="btnchangecolortxt"href="">更多消息<i class="btnchangecolortxt fa-solid fa-angles-right"></i>
                     </a>
                 </div>
-            </div>    
+            </div>
+            </div>
         </div>
         <div class="activity" id="activity">
             <div class="cloudtitle"><h2>牧場體驗</h2></div>
@@ -113,7 +118,7 @@
                     <h3>烤肉方案</h3></a>
                 </div>
                 <div class="more btnchangecolor">
-                <a class="btnchangecolortxt" href="">更多活動<i class="btnchangecolortxt fa-solid fa-angles-right"></i></a></div>
+                <a class="btnchangecolortxt" href="activity.html">更多活動<i class="btnchangecolortxt fa-solid fa-angles-right"></i></a></div>
             </div>
         </div>
         <div class="shop" id="shop">
@@ -135,7 +140,7 @@
                     <h3>文創商品</h3>
                 </div>
                 <div class="more btnchangecolor">
-                    <a class="btnchangecolortxt" href="">全部商品<i class="btnchangecolortxt fa-solid fa-angles-right"></i></a></div>
+                    <a class="btnchangecolortxt" href="shop.html">全部商品<i class="btnchangecolortxt fa-solid fa-angles-right"></i></a></div>
             </div>
             <div class="product">
                 <div class="object"><a href=""><img src="p\cookie.png"></a></div>
@@ -149,7 +154,7 @@
                 </div>
             </div>
             <div class="goshop btnchangecolor">
-            <a class="btnchangecolortxt" href=""><i class="fa-solid fa-cart-shopping"></i>牧場直送 小農安心</a></div>
+            <a class="btnchangecolortxt" href="shop.html"><i class="fa-solid fa-cart-shopping"></i>牧場直送 小農安心</a></div>
         </div>
         <div class="contact" id="contact">
             <div class="cloudtitle"><h2>交通資訊</h2></div>
