--- a/milkshop.html
+++ b/milkshop.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant-TW">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -70,7 +70,7 @@
         </aside>
         <section>
             <div class="item">
-                <a href="">
+                <a href="detail.html">
                 <img src="p\milk.png" alt="">
                 <h2>羊奶 (400ml/瓶)</h2>
                 <p>NT$45</p></a>
