--- a/shop.html
+++ b/shop.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant-TW">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -65,7 +65,7 @@
         <div class="sum">
             <div class="item">
                 <p>純乳</p>
-                <a href=""><img src="p/milk.jpg"></a>
+                <a href="milkshop.html"><img src="p/milk.jpg"></a>
                 <h3>純乳系列</h3>
             </div>
             <div class="item">
