--- a/shop.html
+++ b/shop.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/shop.css">
 </head>
 <body>
-    <header><a href="index.html"><img src="logo/logo.png" alt="logo"></a></header>
+    <header id="header"><a href="index.html"><img src="logo/logo.png" alt="logo"></a></header>
     <nav>
         <ul class="navmenu">
             <li class="list"><a href="new.html">最新消息</a></li>
@@ -119,7 +119,7 @@
                     <a href=""><h3>客服信箱</h3><i class="fa-solid fa-envelope"></i></a>
                 </div>
                 <div class="totop">
-                    <a href="">TOP</a>
+                    <a href="#header">TOP</a>
                 </div>
             </div>
             <p>本網站為緯育TibaMe【第85期】前端工程師專業技術養成班學員作品,僅供學習、展示之用途。</p>
