--- a/activity.html
+++ b/activity.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/activity.css">
 </head>
 <body>
-    <header><a href="index.html"><img src="logo/logo.png" alt="logo"></a></header>
+    <header id="header"><a href="index.html"><img src="logo/logo.png" alt="logo"></a></header>
     <nav>
         <ul class="navmenu">
             <li class="list"><a href="new.html">最新消息</a></li>
@@ -191,7 +191,7 @@
                 </div>
                 <div class="price">
                     <p>價格</p>
-                    <p>499</p>
+                    <p>499 元</p>
                     <div class="more btnchangecolor">
                         <a class="btnchangecolortxt" href="activity.html">馬上預約<i class="btnchangecolortxt fa-solid fa-angles-right"></i></a>
                     </div>
@@ -209,7 +209,7 @@
                 </div>
                 <div class="price">
                     <p>價格</p>
-                    <p>699</p>
+                    <p>699 元</p>
                     <div class="more btnchangecolor">
                         <a class="btnchangecolortxt" href="activity.html">馬上預約<i class="btnchangecolortxt fa-solid fa-angles-right"></i></a>
                     </div>
@@ -227,7 +227,7 @@
                 </div>
                 <div class="price">
                     <p>價格</p>
-                    <p>899</p>
+                    <p>899 元</p>
                     <div class="more btnchangecolor">
                         <a class="btnchangecolortxt" href="activity.html">馬上預約<i class="btnchangecolortxt fa-solid fa-angles-right"></i></a>
                     </div>
@@ -262,7 +262,7 @@
                 <a href=""><h3>客服信箱</h3><i class="fa-solid fa-envelope"></i></a>
             </div>
             <div class="totop">
-                <a href="">TOP</a>
+                <a href="#header">TOP</a>
             </div>
         </div>
         <p>本網站為緯育TibaMe【第85期】前端工程師專業技術養成班學員作品,僅供學習、展示之用途。</p>
