--- a/index.html
+++ b/index.html
@@ -10,6 +10,29 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
+    <div class="wrap">
+        <ul class="topmenu">
+            <li class="toplist"><a href="new.html">最新消息</a></li>
+            <li class="toplist"><a href="about.html">園區介紹</a></li>
+            <li class="toplist"><a href="activity.html">牧場體驗</a></li>
+            <li class="toplist"><a href="shop.html">小農產品</a></li>
+            <li class="toplist"><a href="QA.html">常見問題</a></li>
+            <li class="toplist"><a href="">登入</a></li>
+        </ul>
+        <div class="para">
+            <img src="back\cloudl.png" id="cl" alt="">
+            <img src="back\cloudr.png" id="cr" alt="">
+            <img src="back\moun.png" id="moun" alt="">
+            <img src="back\floor.png" id="floor" alt="">
+            <img src="back\paralogo.png" id="paralogo" alt="">
+        </div>
+        <div class="grass">
+    
+        </div>
+        <div class="box">
+    
+        </div>
+    </div>
     <header id="header"><a href="index.html"><img src="logo/logo.png" alt="logo"></a></header>
     <nav>
         <ul class="navmenu">
@@ -67,7 +90,7 @@
             </div>
             <div class="item">
                 <p>體驗</p>
-                <a href=""><img src="ready\play.jpg"></a>
+                <a href=""><img src="ready/play.jpg"></a>
             </div>
             <div class="item">
                 <p>購物</p>
@@ -106,14 +129,14 @@
         <div class="activity" id="activity">
             <div class="cloudtitle"><h2>牧場體驗</h2></div>
             <div class="act">
-                <div class="card">
-                     <a href=""><img src="ready\a1.jpg"></a><h3>動物互動</h3>
+                <div class="card col-3">
+                     <a href=""><img src="ready\a1.jpg"><h3>動物互動</h3></a>
                 </div>
-                <div class="card">
+                <div class="card col-3">
                     <a href=""><img src="ready\a2.jpg">
                     <h3>手作工坊</h3></a>
                 </div>
-                <div class="card">
+                <div class="card col-3">
                     <a href=""><img src="ready\a3.jpg">
                     <h3>烤肉方案</h3></a>
                 </div>
