--- a/new.html
+++ b/new.html
@@ -56,7 +56,7 @@
             </select>
         </form>
         <ul class="col-10">
-            <li><p class="s">公告時間</p><p class="s">類別</p><p class="m">標題</p><p class="s">觀看數</p></li>
+            <li><p class="s">公告時間</p><p class="s">類別</p><p class="m">標題</p><p class="ss">觀看數</p></li>
             <li>
                 <a href="">
                     <p class="date">2023.01.08</p>
