--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    <div class="wrap">
+    <!-- <div class="wrap">
         <ul class="topmenu">
             <li class="toplist"><a href="new.html">最新消息</a></li>
             <li class="toplist"><a href="about.html">園區介紹</a></li>
@@ -32,7 +32,7 @@
         <div class="box">
     
         </div>
-    </div>
+    </div> -->
     <header id="header"><a href="index.html"><img src="logo/logo.png" alt="logo"></a></header>
     <nav>
         <ul class="navmenu">
