--- a/about.html
+++ b/about.html
@@ -80,6 +80,11 @@
                 <td>75</td>
                 <td>65歲長者及身障者</td>
             </tr>
+        </table>
+        <table>
+            <thead>
+                <th colspan="5"> </th>
+            </thead>
             <tr>
                 <td><i class="fa-solid fa-square-parking"></i></td>
                 <td>停車費</td>
@@ -128,7 +133,7 @@
             <div class="txt">
             <h3>精彩的活動</h3><p>
             您可以參加精心設計的導覽，了解動物的生活習性和飼養秘密；享受美味的農場美食，品嚐新鮮的乳製品和農產品。<br>
-            無論您是家庭旅遊、朋友聚會，或是單獨一人的冒險，我們的觀光牧場都將為您打造一段難忘的經歷。</p></div>
+            無論您是家庭旅遊、朋友聚會，或是單獨一人的冒險，都將為您打造一段難忘的經歷。</p></div>
         </div>
         <div class="block"><img src="">
             <img class="col-6" src="activity\cook.jpg" alt="">
