--- a/index.html
+++ b/index.html
@@ -101,29 +101,33 @@
         <div class="new" id="new">
             <div class="cloudtitle"><h2>最新消息</h2></div>
             <div class="ground">
-            <div class="sheeprow">
-                <div class="newcol">
-                <a href=""><img src="item\new1.png"></a>
-                <a href=""><h3>烤肉週所有方案9折!</h3></a>
+                <div class="sheeprow">
+                    <div class="newcol">
+                        <a href=""><img src="item\new1.png"></a>
+                        <a href=""><h3>烤肉週所有方案9折!</h3></a>
+                    </div>
+                    <div class="newcol">
+                        <a href=""><img src="item\new2.png"></a>
+                        <a href=""><h3>牧場採摘季：現在是採摘的最佳時機！帶上朋友和家人，一起來採摘新鮮的水果和蔬菜，體驗農場樂趣！</h3></a>
+                    </div>
+                    <div class="newcol">
+                        <a href=""><img src="item\new1.png"></a>
+                        <a href=""><h3>烤肉週所有方案9折!</h3></a>
+                    </div>  
                 </div>
-                <div class="newcol">
-                <a href=""><img src="item\new2.png"></a>
-                <a href="">
-                <h3>牧場採摘季：現在是採摘的最佳時機！帶上朋友和家人，一起來採摘新鮮的水果和蔬菜，體驗農場樂趣！</h3></a>
+                <div class="btngroup">
+                    <div class="btn">
+                        <button><i class="fa-solid fa-arrow-left"></i></button>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <button><i class="fa-solid fa-arrow-right"></i></button>
+                    </div>
+                    <div class="more  btnchangecolor">
+                        <a class="btnchangecolortxt"href="new.html">更多消息<i class="btnchangecolortxt fa-solid fa-angles-right"></i>
+                        </a>
+                    </div>
                 </div>
-                <div class="newcol">
-                <a href=""><img src="item\new1.png"></a>
-                <a href=""><h3>烤肉週所有方案9折!</h3></a>
-                </div>  
-                <div class="btn">
-                    <button><i class="fa-solid fa-arrow-left"></i></button>
-                    <button><i class="fa-solid fa-arrow-right"></i></button>
-                </div>
-                <div class="more  btnchangecolor">
-                    <a class="btnchangecolortxt"href="">更多消息<i class="btnchangecolortxt fa-solid fa-angles-right"></i>
-                    </a>
-                </div>
-            </div>
             </div>
         </div>
         <div class="activity" id="activity">
@@ -140,12 +144,13 @@
                     <a href=""><img src="ready\a3.jpg">
                     <h3>烤肉方案</h3></a>
                 </div>
-                <div class="more btnchangecolor">
-                <a class="btnchangecolortxt" href="activity.html">更多活動<i class="btnchangecolortxt fa-solid fa-angles-right"></i></a></div>
+            </div>
+            <div class="more btnchangecolor">
+                <a class="btnchangecolortxt" href="activity.html">更多活動<i class="btnchangecolortxt fa-solid fa-angles-right"></i></a>
             </div>
         </div>
+        <div class="cloudtitle"><h2>熱銷產品</h2></div>
         <div class="shop" id="shop">
-            <div class="cloudtitle"><h2>熱銷產品</h2></div>
             <div class="sum">
                 <div class="item">
                     <p>純乳</p>
@@ -162,19 +167,26 @@
                     <a href=""><img src="p\24846460_s.jpg"></a>
                     <h3>文創商品</h3>
                 </div>
-                <div class="more btnchangecolor">
-                    <a class="btnchangecolortxt" href="shop.html">全部商品<i class="btnchangecolortxt fa-solid fa-angles-right"></i></a></div>
             </div>
+            <div class="more btnchangecolor">
+                <a class="btnchangecolortxt" href="shop.html">全部商品<i class="btnchangecolortxt fa-solid fa-angles-right"></i></a>
+            </div>
+            <div class="productwrap">
             <div class="product">
-                <div class="object"><a href=""><img src="p\cookie.png"></a></div>
-                <div class="object"><a href=""><img src="p\milk2.png"></a></div>
-                <div class="object"><a href=""><img src="p\macaro.png"></a><h4>冰淇淋馬卡龍</h4></div>
-                <div class="object"><a href=""><img src="p/milk.png"></a></div>
-                <div class="object"><a href=""><img src="p\mocha.png"></a></div>
-                <div class="btn ">
-                    <button><i class="fa-solid fa-arrow-left"></i></button>
-                    <button><i class="fa-solid fa-arrow-right"></i></button>
-                </div>
+                <div class="object"><a href=""><img src="p/cookie.png" draggable="false"></a></div>
+                <div class="object"><a href=""><img src="p/milk2.png" draggable="false"></a></div>
+                <div class="object"><a href=""><img src="p/macaro.png" draggable="false"></a></div>
+                <div class="object"><a href=""><img src="p/milk.png" draggable="false"></a></div>
+                <div class="object"><a href=""><img src="p/mocha.png" draggable="false"></a></div>
+                <div class="object"><a href=""><img src="p/pudding.png" draggable="false"></a></div>
+                <div class="object"><a href=""><img src="p/manjyu.png" draggable="false"></a></div>
+                <div class="object"><a href=""><img src="p/manjyu2.png" draggable="false"></a></div>
+            </div>    
+            <div class="btn">
+                <button id="left"><i class="fa-solid fa-arrow-left"></i></button>
+                <span id="productname"></span>
+                <button id="right"><i class="fa-solid fa-arrow-right" ></i></button>
+            </div>
             </div>
             <div class="goshop btnchangecolor">
             <a class="btnchangecolortxt" href="shop.html"><i class="fa-solid fa-cart-shopping"></i>牧場直送 小農安心</a></div>
@@ -192,7 +204,7 @@
                 公共交通工具：
                 乘坐火車並在中壢火車站下車，在火車站後門轉乘44號公車至羊桃觀光牧場站下車。
                 </p></div>
-                <div class="map"><iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d3617.2532040645333!2d121.2228819650047!3d24.95749848400817!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1z5Zyw5Z2AIDogMzIw5qGD5ZyS5biC5Lit5aOi5Y2A5b6p6IiI6LevNDbomZ8!5e0!3m2!1szh-TW!2stw!4v1688885124531!5m2!1szh-TW!2stw" width="600" height="550" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+                <div class="map"><iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d3617.2532040645333!2d121.2228819650047!3d24.95749848400817!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1z5Zyw5Z2AIDogMzIw5qGD5ZyS5biC5Lit5aOi5Y2A5b6p6IiI6LevNDbomZ8!5e0!3m2!1szh-TW!2stw!4v1688885124531!5m2!1szh-TW!2stw" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
             </div>
         </div>
     </main>
@@ -228,5 +240,6 @@
         </div>
         <p>本網站為緯育TibaMe【第85期】前端工程師專業技術養成班學員作品,僅供學習、展示之用途。</p>
     </footer>
+    <script src="index.js"></script>
 </body>
 </html>
